...
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Kino"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_grocery"
        app:layout_constraintEnd_toEndOf="@+id/Button_cinema"
        app:layout_constraintStart_toStartOf="@+id/Button_cinema"
        app:layout_constraintTop_toBottomOf="@+id/Button_cinema" />

    <TextView
        android:id="@+id/textView_gas"
        android:layout_width="wrap_content"
...
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Sprit"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_gym"
        app:layout_constraintEnd_toEndOf="@+id/Button_gas"
        app:layout_constraintStart_toStartOf="@+id/Button_gas"
        app:layout_constraintTop_toBottomOf="@+id/Button_gas" />

    <TextView
        android:id="@+id/textView_fastFood"
        android:layout_width="wrap_content"
...
